--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -5,15 +5,12 @@
     </a>
     <nav class="flex gap-6 text-sm font-semibold text-croper-text">
       <a
-        routerLink="/catalog"
+        routerLink="/"
         routerLinkActive="text-croper-green"
         class="hover:text-croper-green transition-colors"
         >Marketplace</a
       >
-      <a
-        routerLink="/auth/login"
-        routerLinkActive="text-croper-green"
-        class="hover:text-croper-green"
+      <a routerLink="/ingreso" routerLinkActive="text-croper-green" class="hover:text-croper-green"
         >Entrar</a
       >
     </nav>
