--- a/src/app/features/dashboard/components/product-list/product-list.html
+++ b/src/app/features/dashboard/components/product-list/product-list.html
@@ -82,7 +82,11 @@
                 </div>
               </td>
               <td class="px-6 py-4 text-center">
-                <button class="text-croper-gray hover:text-croper-dark p-1">
+                <a
+                  [routerLink]="['/admin/inventario/editar-producto', product._id]"
+                  class="text-croper-gray hover:text-croper-green p-2 rounded-full hover:bg-gray-100 transition-all cursor-pointer"
+                  title="Editar producto"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="h-5 w-5"
@@ -94,10 +98,10 @@
                       stroke-linecap="round"
                       stroke-linejoin="round"
                       stroke-width="2"
-                      d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"
+                      d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
                     />
                   </svg>
-                </button>
+                </a>
               </td>
             </tr>
           } @empty {
