--- a/src/app/features/dashboard/components/user-form/user-form.html
+++ b/src/app/features/dashboard/components/user-form/user-form.html
@@ -26,6 +26,11 @@
           placeholder="Ej. Juan Pérez"
           class="px-4 py-2.5 bg-gray-50 border border-gray-200 rounded-xl text-sm focus:border-croper-green outline-none transition-all"
         />
+        @if (userForm.fullName().touched() && userForm.fullName().errors()[0]?.message) {
+          <span class="text-xs text-red-500 mt-1 block">{{
+            userForm.fullName().errors()[0].message
+          }}</span>
+        }
       </div>
 
       <div class="flex flex-col gap-1.5">
@@ -38,6 +43,11 @@
           placeholder="Ej. jperez123"
           class="px-4 py-2.5 bg-gray-50 border border-gray-200 rounded-xl text-sm focus:border-croper-green outline-none transition-all"
         />
+        @if (userForm.username().touched() && userForm.username().errors()[0]?.message) {
+          <span class="text-xs text-red-500 mt-1 block">{{
+            userForm.username().errors()[0].message
+          }}</span>
+        }
       </div>
     </div>
 
@@ -52,6 +62,11 @@
           placeholder="juan@ejemplo.com"
           class="px-4 py-2.5 bg-gray-50 border border-gray-200 rounded-xl text-sm focus:border-croper-green outline-none transition-all"
         />
+        @if (userForm.email().touched() && userForm.email().errors()[0]?.message) {
+          <span class="text-xs text-red-500 mt-1 block">{{
+            userForm.email().errors()[0].message
+          }}</span>
+        }
       </div>
 
       <div class="flex flex-col gap-1.5">
@@ -86,6 +101,11 @@
             </svg>
           </div>
         </div>
+        @if (userForm.role().touched() && userForm.role().errors()[0]?.message) {
+          <span class="text-xs text-red-500 mt-1 block">{{
+            userForm.role().errors()[0].message
+          }}</span>
+        }
       </div>
     </div>
 
@@ -101,6 +121,11 @@
             placeholder="Min. 6 caracteres"
             class="px-4 py-2.5 bg-gray-50 border border-gray-200 rounded-xl text-sm focus:border-croper-green outline-none transition-all"
           />
+          @if (userForm.password()?.touched() && userForm.password()?.errors()?.length) {
+            <span class="text-xs text-red-500 mt-1 block">{{
+              userForm.password()?.errors()![0].message
+            }}</span>
+          }
         } @else {
           <div class="h-full flex items-end pb-2">
             <p class="text-[11px] text-croper-gray italic font-medium">
