--- a/src/app/features/dashboard/components/user-form/user-form.html
+++ b/src/app/features/dashboard/components/user-form/user-form.html
@@ -121,9 +121,9 @@
             placeholder="Min. 6 caracteres"
             class="px-4 py-2.5 bg-gray-50 border border-gray-200 rounded-xl text-sm focus:border-croper-green outline-none transition-all"
           />
-          @if (userForm.password()?.touched() && userForm.password()?.errors()?.length) {
+          @if (userForm.password().touched() && userForm.password().errors().length) {
             <span class="text-xs text-red-500 mt-1 block">{{
-              userForm.password()?.errors()![0].message
+              userForm.password().errors()[0].message
             }}</span>
           }
         } @else {
