--- a/src/app/features/auth/pages/register/register.html
+++ b/src/app/features/auth/pages/register/register.html
@@ -45,6 +45,11 @@
           placeholder="Ej: Juan Pérez"
           class="w-full px-4 py-2 rounded-lg border border-gray-200 focus:border-croper-green outline-none transition-all"
         />
+        @if (registerForm.fullName().touched() && registerForm.fullName().errors()[0]?.message) {
+          <span class="text-xs text-red-500 mt-1 block">{{
+            registerForm.fullName().errors()[0].message
+          }}</span>
+        }
       </div>
 
       <div>
@@ -55,6 +60,11 @@
           placeholder="usuario123"
           class="w-full px-4 py-2 rounded-lg border border-gray-200 focus:border-croper-green outline-none transition-all"
         />
+        @if (registerForm.username().touched() && registerForm.username().errors()[0]?.message) {
+          <span class="text-xs text-red-500 mt-1 block">{{
+            registerForm.username().errors()[0].message
+          }}</span>
+        }
       </div>
 
       <div>
@@ -65,6 +75,11 @@
           placeholder="correo@ejemplo.com"
           class="w-full px-4 py-2 rounded-lg border border-gray-200 focus:border-croper-green outline-none transition-all"
         />
+        @if (registerForm.email().touched() && registerForm.email().errors()[0]?.message) {
+          <span class="text-xs text-red-500 mt-1 block">{{
+            registerForm.email().errors()[0].message
+          }}</span>
+        }
       </div>
 
       <div>
@@ -75,6 +90,11 @@
           placeholder="••••••••"
           class="w-full px-4 py-2 rounded-lg border border-gray-200 focus:border-croper-green outline-none transition-all"
         />
+        @if (registerForm.password().touched() && registerForm.password().errors()[0]?.message) {
+          <span class="text-xs text-red-500 mt-1 block">{{
+            registerForm.password().errors()[0].message
+          }}</span>
+        }
       </div>
 
       <button
