--- a/src/app/features/auth/pages/register/register.html
+++ b/src/app/features/auth/pages/register/register.html
@@ -100,7 +100,7 @@
       <button
         type="submit"
         [disabled]="authStore.loading() || registerForm().invalid() || isSuccess()"
-        class="w-full bg-croper-green text-white py-4 rounded-lg font-bold shadow-croper hover:bg-croper-green-dark transition-all disabled:opacity-50 flex justify-center items-center gap-2"
+        class="w-full bg-croper-green text-white py-4 rounded-lg font-bold shadow-croper hover:bg-croper-green-dark transition-all disabled:opacity-50 flex justify-center items-center gap-2 cursor-pointer"
       >
         @if (authStore.loading()) {
           <span
@@ -116,7 +116,7 @@
     <div class="mt-6 pt-4 border-t border-gray-100 text-center">
       <p class="text-sm text-croper-gray">
         ¿Ya tienes cuenta?
-        <a routerLink="/ingreso" class="text-croper-green font-bold hover:underline"
+        <a routerLink="/ingreso" class="text-croper-green font-bold hover:underline cursor-pointer"
           >Inicia sesión</a
         >
       </p>
