--- a/src/app/features/dashboard/components/product-list/product-list.html
+++ b/src/app/features/dashboard/components/product-list/product-list.html
@@ -15,7 +15,7 @@
       </p>
       <button
         (click)="productStore.reloadProducts()"
-        class="px-6 py-2 bg-croper-dark text-white rounded-lg font-bold text-sm"
+        class="px-6 py-2 bg-croper-dark text-white rounded-lg font-bold text-sm cursor-pointer"
       >
         Reintentar ahora
       </button>
@@ -104,7 +104,7 @@
                 </a>
                 <button
                   (click)="openDeleteModal(product)"
-                  class="text-croper-gray hover:text-red-500 p-1 transition-colors"
+                  class="text-croper-gray hover:text-red-500 p-1 transition-colors cursor-pointer"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -142,7 +142,7 @@
         <button
           (click)="productStore.prevPage()"
           [disabled]="productStore.page() === 1 || productStore.resource.isLoading()"
-          class="px-4 py-2 text-xs font-bold rounded-lg border bg-white disabled:opacity-50"
+          class="px-4 py-2 text-xs font-bold rounded-lg border bg-white disabled:opacity-50 cursor-pointer"
         >
           Anterior
         </button>
@@ -152,7 +152,7 @@
           [disabled]="
             productStore.page() >= productStore.totalPages() || productStore.resource.isLoading()
           "
-          class="px-4 py-2 text-xs font-bold rounded-lg bg-croper-green text-white disabled:opacity-50"
+          class="px-4 py-2 text-xs font-bold rounded-lg bg-croper-green text-white disabled:opacity-50 cursor-pointer"
         >
           Siguiente
         </button>
@@ -185,14 +185,14 @@
         <button
           (click)="closeDeleteModal()"
           [disabled]="isDeleting()"
-          class="flex-1 px-4 py-2.5 border border-gray-200 text-croper-gray font-bold rounded-xl hover:bg-gray-50 transition-all disabled:opacity-50"
+          class="flex-1 px-4 py-2.5 border border-gray-200 text-croper-gray font-bold rounded-xl hover:bg-gray-50 transition-all disabled:opacity-50 cursor-pointer"
         >
           Cancelar
         </button>
         <button
           (click)="confirmDelete()"
           [disabled]="isDeleting()"
-          class="flex-1 px-4 py-2.5 bg-red-600 text-white font-bold rounded-xl hover:bg-red-700 shadow-lg shadow-red-200 transition-all flex justify-center items-center gap-2 disabled:opacity-50"
+          class="flex-1 px-4 py-2.5 bg-red-600 text-white font-bold rounded-xl hover:bg-red-700 shadow-lg shadow-red-200 transition-all flex justify-center items-center gap-2 disabled:opacity-50 cursor-pointer"
         >
           @if (isDeleting()) {
             <span
